@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
 # $1 file path, $2 signature name, $3 file owner, $4 file mode, $5 file size (b), $6 file md5sum
 if [ -f "$1" ]; then
-	sed -E -i -e 's/^<?php if(!isset($GLOBALS\[\"\\x.*; ?>//' "$1"
+	$sed -i -e 's/^<?php if(!isset($GLOBALS\[\"\\x.*; ?>//' "$1"
 fi
